--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,4 +31,10 @@
         android:layout_marginBottom="10dp"
         android:layout_marginStart="10dp"
         android:text="清除" />
+
+    <Button
+        android:id="@+id/mToSelectCalBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="跳转封装的日历" />
 </LinearLayout>
