--- a/app/src/main/res/layout/view_select_calendar_layout.xml
+++ b/app/src/main/res/layout/view_select_calendar_layout.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -34,7 +35,7 @@
     </RelativeLayout>
 
     <com.haibin.calendarview.CalendarView
-        android:id="@+id/mCalendarView"
+        android:id="@+id/mCv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
