--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,20 +9,20 @@
     tools:ignore="RtlHardcoded,HardcodedText,RtlSymmetry,SmallSp">
 
 
-    <com.haibin.calendarview.CalendarView
-        android:id="@+id/mCalendarView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        app:min_year="2017"
-        app:month_view="com.dan.mycalendardemo.weight.CustomRangeMonthView"
-        app:month_view_show_mode="mode_only_current"
-        app:other_month_text_color="#acacac"
-        app:scheme_theme_color="#ee7621"
-        app:select_mode="range_mode"
-        app:selected_text_color="#ffffff"
-        app:selected_theme_color="#ee7621"
-        app:week_view="com.dan.mycalendardemo.weight.CustomRangeWeekView" />
+    <!--<com.haibin.calendarview.CalendarView-->
+        <!--android:id="@+id/mCalendarView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="1"-->
+        <!--app:min_year="2017"-->
+        <!--app:month_view="com.dan.mycalendardemo.weight.CustomRangeMonthView"-->
+        <!--app:month_view_show_mode="mode_only_current"-->
+        <!--app:other_month_text_color="#acacac"-->
+        <!--app:scheme_theme_color="#ee7621"-->
+        <!--app:select_mode="range_mode"-->
+        <!--app:selected_text_color="#ffffff"-->
+        <!--app:selected_theme_color="#ee7621"-->
+        <!--app:week_view="com.dan.mycalendardemo.weight.CustomRangeWeekView" />-->
 
     <Button
         android:id="@+id/mClearBtn"
