--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,12 @@
         android:text="清除" />
 
     <Button
+        android:id="@+id/mPopupBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="弹出日历" />
+
+    <Button
         android:id="@+id/mToSelectCalBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
